# PowerfulTS

./: .cz.toml  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  netlify.toml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  _version.py  deps.py  main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  account.py  app_setting.py  bot_player_state.py  community.py  stats.py
backend/app/routers/: admin.py  auth.py  bilibili.py  friends.py  intro_music.py  monitor.py  music.py  steam.py
backend/app/services/: app_setting.py  auth_service.py  bilibili.py  bot_idle_manager.py  bot_mover.py  bot_player_state.py  friend_service.py  napcat_client.py  netease.py  notification_utils.py  online_notifier.py  steam_client.py  ts3_auth.py  ts3_monitor.py  ts3_query.py  ts3audio_client.py  tsmusic_client.py
backend/data/intro-music/: .gitkeep  README.md
backend/tests/: test_bot_idle_manager.py  test_channel_hierarchy.py  test_friend_notification_delivery.py  test_friend_request_model_collision.py  test_music_follow.py  test_music_library_sharing.py  test_music_quality.py  test_online_notifier.py  test_player_state_persistence.py
deploy/: netlify-steam-verify.md
deploy/cloudflare-worker/steam-verify/: index.js  (+2 more)
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts  version.d.ts
netlify/edge-functions/: steam-verify.ts
scripts/: check_versions.py
(+55 files in other folders)
