[project]
name = "powerfults-backend"
version = "0.8.0"
description = "PowerfulTS — TS3 监控面板后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
]
